[package]
name = "gethostlatency"
version = "0.1.0"
authors = ["Eishun Kondoh <shun3382@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
libbpf-rs = "0.8"
libc = "0.2"
plain = "0.2"
structopt = "0.3"
goblin = "0.3"
regex = "1"
